tests/negative/semantic/for_init_bool/input.ci
void main() {
    for (int i = true; i < 3; i++) { print(toString(i) + "\n"); }
}
